--- a/package.json
+++ b/package.json
@@ -5,12 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npx vite build",
-    "lint": "eslint .",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
-  },
-  "engines": {
-    "node": "20.x"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
