feat: add .vercelignore to exclude node_modules, .vscode, and dist; define node engine version in package.json

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
+   "engines": {
+    "node": ">=18.x"
+  },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.13",
