--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
-   "engines": {
+  "engines": {
     "node": ">=18.x"
   },
   "dependencies": {
@@ -35,6 +35,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "lightningcss": "^1.30.2",
     "rollup": "^4.52.4",
     "vite": "^7.1.9"
   }
